--- a/Vehicle-registration/src/main/resources/templates/listVehicles.html
+++ b/Vehicle-registration/src/main/resources/templates/listVehicles.html
@@ -78,7 +78,7 @@
     </style>
 </head>
 <body>
-<h1>Vehicle List</h1>
+<h1>CM_CARS</h1>
 
 <div th:if="${message}" class="message-success" th:text="${message}"></div>
 
@@ -99,7 +99,7 @@
     <tbody>
     <tr th:each="vehicle : ${vehicles}">
         <td th:text="${vehicle.id}">1</td>
-        <td> <img th:src="${vehicle.imgUrl}" width="100" height="60" alt="Vehicle Image"></td>
+        <td> <img th:src="${vehicle.imgUrl}" width="150" height="90" alt="Vehicle Image"></td>
         <td th:text="${vehicle.type}">Car</td>
         <td th:text="${vehicle.brand}">Toyota</td>
         <td th:text="${vehicle.model}">Corolla</td>
